--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -1,13 +1,18 @@
 <html>
     <head>
+      <meta name="csrf-token" content="<%=csrfToken %>" />
       <link href="./css/styles.css" rel="stylesheet">
       <script src="https://cdn.tailwindcss.com"></script> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.15/tailwind.min.css"> 
       <script>
+        var token=document.querySelector('meta[name=csrf-token]').getAttribute("content");
         function updateTodo(id){
           fetch(`/todos/${id}/markAsCompleted`,{
             method: "put",
             headers: { "Content-Type": "application/json"},
+            body:JSON.stringify({
+              "_csrf":token
+            })
           })
           .then((res) => {
             if(res.ok){
@@ -21,6 +26,9 @@
         fetch(`/todos/${id}`,{
           method:"delete",
           headers: {"Content-Type":"application/json"},
+          body:JSON.stringify({
+              "_csrf":token
+            })
 
         })
         .then((res) =>{
@@ -38,6 +46,7 @@
         <div class="col-start-3 col-span-2">
          <%- include('header.ejs')%>
          <form action="/todos" method="post">
+          <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
           <div class="flex gap-2 py-4">
             <div class="flex-auto">
               <input type="text"  name="title" placeholder="what's next?" class="border border-gray-300 rounded text-gray-900 text-sm w-full p-2" required/>
